<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HitchHiker!</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="attempts">Attempts</string>
    <string name="LoginAuthentication">Login Authentication</string>
    <string name="SignUp">Sign Up</string>
    <string name="Name">Name</string>
    <string name="PhoneNumber">Phone#</string>
    <string name="SignupPassword">Enter Password</string>
    <string name="VerifyPassword">Re-Enter Password</string>
    <string name="MyBookings">Bookings Dashboard</string>
    <string name="HomeName"></string>
    <string name="TimeSlot_6AMto6PM">Time between 6AM to 6PM</string>
    <string name="TimeSlot_6PMto6AM">Time between 6PM to 6AM</string>

    <string-array name="Time_Slot_6AM_6PM">
        <item>18:01 - 18:30</item>
        <item>18:31 - 19:00 </item>
        <item>19:01 - 19:30 </item>
        <item>19:31 - 20:00 </item>
        <item>20:01 - 20:30 </item>
        <item>20:31 - 21:00 </item>
        <item>21:01 - 21:30 </item>
        <item>21:31 - 22:00 </item>
        <item>22:01 - 22:30 </item>
        <item>22:31 - 23:00 </item>
        <item>23:01 - 23:30 </item>
        <item>23:31 - 00:00 </item>
        <item>00:01 - 00:30 </item>
        <item>00:31 - 01:00 </item>
        <item>01:01 - 01:30 </item>
        <item>01:31 - 02:00 </item>
        <item>02:01 - 02:30 </item>
        <item>02:31 - 03:00 </item>
        <item>03:01 - 03:30 </item>
        <item>03:31 - 04:00 </item>
        <item>04:01 - 04:30 </item>
        <item>04:31 - 05:00 </item>
        <item>05:01 - 05:30 </item>
        <item>05:31 - 06:00 </item>
        <item>06:00 - 06:30 </item>
        <item>06:31 - 07:00 </item>
        <item>07:01 - 07:30 </item>
        <item>07:31 - 08:00 </item>
        <item>08:01 - 08:30 </item>
        <item>08:31 - 09:00 </item>
        <item>09:01 - 09:30 </item>
        <item>09:31 - 10:00 </item>
        <item>10:01 - 10:30 </item>
        <item>10:31 - 11:00 </item>
        <item>11:01 - 11:30 </item>
        <item>11:31 - 12:00 </item>
        <item>12:01 - 12:30 </item>
        <item>12:31 - 13:00 </item>
        <item>13:01 - 13:30 </item>
        <item>13:31 - 14:00 </item>
        <item>14:01 - 14:30 </item>
        <item>14:31 - 15:00 </item>
        <item>15:01 - 15:30 </item>
        <item>15:31 - 16:00 </item>
        <item>16:01 - 16:30 </item>
        <item>16:31 - 17:00 </item>
        <item>17:01 - 17:30 </item>
        <item>17:31 - 18:00 </item>
    </string-array>

    <string name="Source">Select Source</string>
    <string name="Destination">Select Destination</string>
    <string name="No_of_People">No_of_People</string>
    <string name="CreateBooking">Go Book!</string>

    <string-array name="location_list">
        <item>India Market,Santa Clara</item>
        <item>Patel Brothers,Santa Clara</item>
        <item>India Market,Sunnyvale</item>
        <item>Costco, Senter</item>
        <item>MLK Library</item>
        <item>33S Third Street</item>
        <item>Villa Torino</item>
        <item>Legacy Plaza</item>
    </string-array>
    <string-array name="people_list">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <style name="ButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#ffffff</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textSize">30dp</item>
        <item name="android:textStyle">bold</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>

</resources>