<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Spinner
        android:id="@+id/spinner1"
        
        android:layout_width="match_parent"
        android:background="@drawable/dhruv_spinner_background_holo_light"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="16dp"
        android:entries="@array/Time_Slot_6AM_6PM"
        android:prompt="@string/TimeSlot_6AMto6PM" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="14dp"
        android:text="Select Time Slot:"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/spinner1"
        android:text="Source:"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spinner3"
        android:background="@drawable/dhruv_spinner_background_holo_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView3"
        android:entries="@array/location_list"
        android:prompt="@string/Source" />

    <Spinner
        android:id="@+id/spinner4"
        android:background="@drawable/dhruv_spinner_background_holo_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/spinner3"
        android:layout_marginTop="17dp"
        android:entries="@array/location_list"
        android:prompt="@string/Destination" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/spinner3"
        android:text="Destination:"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spinner5"
        android:background="@drawable/dhruv_spinner_background_holo_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/spinner4"
        android:layout_marginTop="17dp"
        android:entries="@array/people_list"
        android:prompt="@string/No_of_People" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/spinner4"
        android:text="No. of People:"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/button1"
        style="@style/ButtonText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/spinner5"
        android:background="@drawable/dhruv_btn_default_holo_light"
        android:onClick="createBooking"
        android:text="@string/CreateBooking" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="Create Booking"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>