<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:paddingBottom="@dimen/activity_vertical_margin"
   android:paddingLeft="@dimen/activity_horizontal_margin"
   android:paddingRight="@dimen/activity_horizontal_margin"
   android:paddingTop="@dimen/activity_vertical_margin"
   tools:context=".MainActivity" >

   <TextView
      android:id="@+id/textView1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="18dp"
      android:textStyle="bold"
      android:text="@string/LoginAuthentication"
      android:textAppearance="?android:attr/textAppearanceLarge" />

   <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_below="@+id/textView1"
      android:layout_marginTop="50dp"
      android:textStyle="bold"
      android:text="@string/PhoneNumber"
      android:textAppearance="?android:attr/textAppearanceMedium" />

   <EditText
      android:id="@+id/editText1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/textView2"
      android:background="@drawable/dhruv_edit_text_holo_light"
      android:layout_marginLeft="32dp"
      android:layout_toRightOf="@+id/textView2"
      android:maxLength="10"
      android:hint="Phone Number"
      android:inputType="phone"
      android:ems="10" >
      <requestFocus />
   </EditText>

   <TextView
      android:id="@+id/textView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@+id/textView2"
      android:layout_below="@+id/textView2"
      android:layout_marginTop="38dp"
      android:textStyle="bold"
      android:text="@string/password"
      android:textAppearance="?android:attr/textAppearanceMedium" />

   <EditText
      android:id="@+id/editText2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/textView3"
      android:layout_alignLeft="@+id/editText1"
      android:hint="Password"
      android:background="@drawable/dhruv_edit_text_holo_light"
      android:ems="10"
      android:inputType="textPassword" />

   <Button
      android:id="@+id/button1"
      android:background="@drawable/dhruv_btn_default_holo_light"
      style="@style/ButtonText"
      android:layout_width="fill_parent"
      android:layout_weight="1"
      android:layout_height="wrap_content"
      android:layout_below="@+id/editText2"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="94dp"
      android:onClick="login"
      android:text="@string/Login" />

   <TextView
      android:id="@+id/textView4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@+id/textView3"
      android:layout_below="@+id/textView3"
      android:layout_marginLeft="30dp"
      android:layout_marginTop="48dp"
      android:text=""
      android:textAppearance="?android:attr/textAppearanceMedium" />

   <TextView
      android:id="@+id/textView5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignRight="@+id/textView1"
      android:layout_alignTop="@+id/textView4"
      android:text="" />

   <Button
       android:id="@+id/button2"
       android:background="@drawable/dhruv_btn_default_holo_light"
       style="@style/ButtonText"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBaseline="@+id/textView6"
       android:layout_alignBottom="@+id/textView6"
       android:layout_toLeftOf="@+id/textView5"
       android:onClick="signUp"
       android:text="@string/SignUp" />

   <TextView
       android:id="@+id/textView6"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@+id/textView3"
       android:layout_alignParentBottom="true"
       android:layout_marginBottom="40dp"
       android:textStyle="bold"
       android:text="@string/SignUp"
       android:textAppearance="?android:attr/textAppearanceLarge" />
</RelativeLayout>